src/test/ui/const-generics/types-mismatch-const-args.full.stderr
error[E0308]: mismatched types
  --> $DIR/types-mismatch-const-args.rs:14:41
   |
LL |     let _: A<'a, u32, {2u32}, {3u32}> = A::<'a, u32, {2u32 + 2u32}, {3u32}> { data: PhantomData };
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2_u32`, found `4_u32`
   |
   = note: expected type `2_u32`
              found type `4_u32`

error[E0308]: mismatched types
  --> $DIR/types-mismatch-const-args.rs:16:41
   |
LL |     let _: A<'a, u16, {2u32}, {3u32}> = A::<'b, u32, {2u32}, {3u32}> { data: PhantomData };
   |            --------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`
   |            |
   |            expected due to this
   |
   = note: expected struct `A<'a, u16, _, _>`
              found struct `A<'b, u32, _, _>`

error[E0308]: mismatched types
  --> $DIR/types-mismatch-const-args.rs:18:41
   |
LL |     let _: A<'a, u16, {4u32}, {3u32}> = A::<'b, u32, {2u32}, {3u32}> { data: PhantomData };
   |            --------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`
   |            |
   |            expected due to this
   |
   = note: expected struct `A<'a, u16, 4_u32, _>`
              found struct `A<'b, u32, 2_u32, _>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
